fix: responsive desktop

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,6 +6,7 @@
     --black: #020203;
     --white: #fff;
     --gray-light: #fbfbfb;
+    --gray-middle: #74798c;
     --gray-dark: #282d30;
     --red-light: #fbeaea;
     --blue-light: #e9f4fb;
