--- a/src/pages/Profile/index.module.scss
+++ b/src/pages/Profile/index.module.scss
@@ -1,3 +1,5 @@
+@use '../../assets/styles/media-queries' as media;
+
 .profile {
     flex: 1;
     margin: 68px 90px;
@@ -7,9 +9,131 @@
     }
 
     .paragraphe {
-        font-size: 18px;
+        font-size: 1rem;
         font-weight: 400;
-        line-height: 24px;
-        margin-top: 40px;
+        line-height: 1.5;
+        margin-top: 2rem;
+    }
+
+    .datas {
+        margin-top: 4rem;
+        gap: 2rem;
+    }
+
+    .statistics {
+        flex: 2;
+        margin-right: 2rem;
+
+        .activities {
+            width: 100%;
+            aspect-ratio: 16 / 9;
+            background-color: var(--gray-light);
+            border-radius: 5px;
+
+            @include media.xxl {
+                height: 320px;
+            }
+        }
+
+        .charts {
+            margin-top: 2rem;
+            gap: 1rem;
+
+            .average,
+            .performance,
+            .goals {
+                flex: 1;
+                aspect-ratio: 1;
+                border-radius: 5px;
+            }
+
+            .average {
+                background-color: var(--red);
+            }
+
+            .performance {
+                background-color: var(--gray-dark);
+            }
+
+            .goals {
+                background-color: var(--gray-light);
+            }
+        }
+    }
+
+    .nutrients {
+        flex: 1;
+        flex-wrap: wrap;
+        gap: 1rem;
+
+        .calories,
+        .proteins,
+        .carbohydrates,
+        .lipids {
+            padding: 1rem;
+            background-color: var(--gray-light);
+            border-radius: 5px;
+
+            @include media.xl {
+                height: 100px;
+            }
+
+            @include media.xxl {
+                height: 124px;
+                padding: 32px
+            }
+
+            .iconsCalories,
+            .iconsProteins,
+            .iconsCarbohydrates,
+            .iconLipids {
+                width: 3rem;
+                height: 3rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 6px;
+                margin-right: 1rem;
+
+                @include media.xl {
+                    margin-right: 32px;
+                }
+            }
+
+
+            .iconsCalories {
+                background-color: var(--red-light);
+            }
+
+            .iconsProteins {
+                background-color: var(--blue-light);
+            }
+
+            .iconsCarbohydrates {
+                background-color: var(--yellow-light);
+            }
+
+            .iconLipids {
+                background-color: var(--pink-light);
+            }
+
+            .total {
+                display: flex;
+                flex-direction: column;
+
+                .number {
+                    font-size: 1.25rem;
+                    font-weight: 700;
+                    color: var(--gray-dark);
+                }
+
+                .name {
+                    margin-top: 0.25rem;
+                    font-size: 0.875rem;
+                    font-weight: 500;
+                    color: var(--gray-middle);
+                }
+            }
+        }
     }
 }
