feat: daily activities

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -10,6 +10,7 @@
     --gray-dark: #282d30;
     --red-light: #fbeaea;
     --blue-light: #e9f4fb;
+    --blue-dark: #20253a;
     --yellow-light: #faf6e5;
     --pink-light: #fbeaef;
     --box-shadow: 0 4px 4px 0 #00000040;
